--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "devDependencies": {
     "eslint": "^5.10.0"
   },
+  "engines": {
+    "node": ">=10.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/europeana/fashion-redirects.js.git"
