--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "redis": "^2.8.0"
   },
   "devDependencies": {
-    "eslint": "^5.10.0"
+    "chai": "^4.2.0",
+    "eslint": "^5.10.0",
+    "mocha": "^5.2.0"
   },
   "engines": {
     "node": ">=10.0"
@@ -22,5 +24,8 @@
     "url": "https://github.com/europeana/fashion-redirects.js.git"
   },
   "main": "fashion_redirects.js",
+  "scripts": {
+    "test": "mocha"
+  },
   "version": "0.1.0"
 }
