--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^5.10.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nyc": "^13.1.0"
   },
   "engines": {
     "node": ">=10.0"
@@ -25,7 +26,9 @@
   },
   "main": "fashion_redirects.js",
   "scripts": {
-    "test": "mocha"
+    "pretest": "docker-compose -f test/docker-compose.yml up -d",
+    "test": "nyc mocha",
+    "posttest": "docker-compose -f test/docker-compose.yml down"
   },
   "version": "0.1.0"
 }
