--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "@europeana/fashion-redirects",
-  "description": "Europeana Fashion redirects as an OpenWhisk web action.",
+  "name": "@europeana/atc-fashion",
+  "description": "Assimilation Traffic Control: HTTP redirection for once-standalone Europeana Fashion sites.",
   "author": "Richard Doe <richard.doe@europeana.eu>",
   "keywords": [
     "code4lib",
-    "serverless",
+    "assimilation",
+    "http",
+    "redirection",
     "openwhisk"
   ],
   "license": "EUPL-1.1",
@@ -13,19 +15,19 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^5.10.0",
+    "eslint": "^5.12.0",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0"
   },
   "engines": {
-    "node": ">=10.0"
+    "node": "^10"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/europeana/fashion-redirects.js.git"
+    "url": "https://github.com/europeana/atc-fashion.git"
   },
-  "main": "fashion_redirects.js",
   "scripts": {
+    "lint": "eslint --ext .js --ignore-path .gitignore .",
     "pretest": "docker-compose -f test/docker-compose.yml up -d",
     "test": "nyc --reporter=lcov mocha",
     "posttest": "docker-compose -f test/docker-compose.yml down"
