--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@europeana/atc-fashion",
   "description": "Assimilated Traffic Control: HTTP redirection for once-standalone Europeana Fashion sites.",
+  "private": true,
   "author": "Richard Doe <richard.doe@europeana.eu>",
   "keywords": [
     "code4lib",
@@ -10,26 +11,30 @@
   ],
   "license": "EUPL-1.1",
   "dependencies": {
-    "redis": "^2.8.0"
+    "elastic-apm-node": "^3.41.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^5.12.0",
-    "mocha": "^5.2.0",
-    "nyc": "^13.1.0"
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-syntax-import-assertions": "^7.20.0",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.0.0"
   },
   "engines": {
-    "node": "^10"
+    "node": "^16"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/europeana/atc-fashion.git"
   },
   "scripts": {
-    "lint": "eslint --ext .js --ignore-path .gitignore .",
-    "pretest": "docker-compose -f test/docker-compose.yml up -d",
-    "test": "nyc --reporter=lcov mocha",
-    "posttest": "docker-compose -f test/docker-compose.yml down"
+    "lint:fix": "npm run lint -- --fix",
+    "lint": "eslint --no-fix --ignore-path .gitignore .",
+    "start": "node src/app.js",
+    "start:dev": "node -r dotenv/config src/app.js"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "type": "module"
 }
